--- a/Changelog.txt
+++ b/Changelog.txt
@@ -31,6 +31,11 @@ Version 1.4.07-dev
  + Added ability to give lore to items in treasures.yml - use the key "Lore" to set, expects a list of strings.
  + Added Quartz and Name Tags to the default Excavation treasures
  + Added a warning message if the server is running NoCheatPlus without CompatNoCheatPlus
+ + Added cooldown to commands with heavy database access to prevent denial of service
+ + Added /mcscoreboard keep, to keep the scoreboard up forever
+ + Added Rainbow Mode to scoreboards
+ + Added new /mccooldowns command to show all ability cooldowns
+ + Commands may now both print text and display a scoreboard
  + Killing a custom entity will automatically add it to the custom entity config file with default values.
  = Fixed bug which allowed players to bypass fishing's exploit prevention
  = Fixed bug where FakeEntityDamageByEntityEvent wasn't being fired
@@ -71,6 +76,8 @@ Version 1.4.07-dev
  ! Party item share category states are now saved when the server shuts down.
  ! When using "Super Breaker" or "Giga Driller" abilities extra tool durability is used (again)
  ! Mob healthbars are automatically disabled when the plugin "HealthBar" is found
+ ! Massively improved scoreboard handling
+ ! Reworked scoreboard configuration (config.yml) - **you will need to update**
  - The /mmoupdate command has been removed. It is replaced by /mcconvert database
  - Removed Abilities.Tools.Durability_Loss_Enabled, set Abilities.Tools.Durability_Loss to 0 to disable instead.
  - Removed Skills.Fishing.Shake_UnlockLevel from advanced.yml, now using Skills.Fishing.Rank_Levels.Rank_1 instead.
