Added ability to give items names & lore through treasures.yml.
Adds #1419

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,6 +23,8 @@ Version 1.4.07-dev
  + Added new McMMOPlayerDeathPenaltyEvent, fired when a player dies and would lose levels
  + Added new McMMOPlayerLevelChangeEvent, fired when a players level changes
  + Added new McMMOPlayerLevelDownEvent, fired when a player loses levels
+ + Added ability to give custom names to items in treasures.yml - use the key "Custom_Name" to set, expects a string.
+ + Added ability to give lore to items in treasures.yml - use the key "Lore" to set, expects a list of strings.
  = Fixed bug which allowed players to bypass fishing's exploit prevention
  = Fixed bug where FakeEntityDamageByEntityEvent wasn't being fired
  = Fixed bug with "Skull Splitter" not finding the locale string
