Fix locale parsing issues.
Fixes #1463

--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -105,7 +105,7 @@ Herbalism.Effect.1=Spred Terra, 3x Tab
 Herbalism.Effect.2=Gr\u00f8nne Fingre (Hvede)
 Herbalism.Effect.3=Auto-Planter afgr\u00f8der mens du h\u00f8ster
 Herbalism.Effect.5=Lav Mursten Mossede, eller f\u00e5 gr\u00e6s til at gro
-Herbalism.Effect.6=Farmer\'s Diet
+Herbalism.Effect.6=Farmer''s Diet
 Herbalism.Effect.7=Forbedrer Sult genoprettet af farmed mad
 Herbalism.Effect.8=Dobble tab (alle planter)
 Herbalism.Effect.9=G\u00f8r din normale udbytte dobblet s\u00e5 stort
@@ -344,7 +344,7 @@ Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rang [[WHITE]]#[[GR
 Commands.mcrank.Player=[[RED]]M\u00c5L: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rang [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Degraderet
-Commands.mcrefresh.Success=[[RED]]{0}\'\'s nedk\u00f8ling er blevet genindl\u00e6st.
+Commands.mcrefresh.Success=[[RED]]{0}''''s nedk\u00f8ling er blevet genindl\u00e6st.
 Commands.mcremove.Success=[[GREEN]]{0} er succesfuldt fjernet fra databasen!
 Commands.mctop.Tip=[[GOLD]]Tip: Brug [[RED]]/mcrank[[GOLD]] for at se all dine personlige rangs!
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - \u00c6ndrer m\u00e5let
