--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -383,7 +383,7 @@ Commands.mcrank.Overall=[[YELLOW]]Conjunto[[GREEN]] - [[GOLD]]Clasificacion [[WH
 Commands.mcrank.Player=[[RED]]OBJETIVO: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Clasificacion [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Sin clasificar
-Commands.mcrefresh.Success=[[RED]]{0}\'\'s del tiempo de reutilizacion ha sido renovado.
+Commands.mcrefresh.Success=[[RED]]{0}''''s del tiempo de reutilizacion ha sido renovado.
 Commands.mcremove.Success=[[GREEN]]{0} fue eliminado de la base de datos exitosamente!!
 Commands.mctop.Tip=[[GOLD]]Tip: Usa [[RED]]/mcrank[[GOLD]] para ver todas tus estadisticas!
 Commands.mmoedit=[jugador] <habilidad> <nuevo valor> [[RED]] - Modificar habilidad
