--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -146,13 +146,13 @@ Commands.ModDescription=[[RED]]- Lees instructie mod beschrijving
 Commands.NoConsole=Deze commando wordt niet ondersteund vanuit de console.
 Commands.Party.ShareMode=[[DARK_GRAY]]DEEL MODUS:
 Commands.Party.Accept=[[RED]]- Accepteer groep uitnodiging
-Commands.Party.Chat.Off=Groep\'s Chat [[RED]]Uit
-Commands.Party.Chat.On=Groep\'s Chat [[GREEN]]Aan
+Commands.Party.Chat.Off=Groep''s Chat [[RED]]Uit
+Commands.Party.Chat.On=Groep''s Chat [[GREEN]]Aan
 Commands.Party.Commands=[[GREEN]]--GROEP COMMANDOS--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]Jij hebt een groep uitnodiging ontvangen voor {0} van {1}
 Commands.Party.Invite=[[RED]]- Verstuur groepsuitnodiging
 Commands.Party.Create=[[GRAY]]Groep aangemaakt: {0}
-Commands.Party.Rename=[[GRAY]]Groep\'s naan veranderd naar: [[WHITE]]{0}
+Commands.Party.Rename=[[GRAY]]Groep''s naan veranderd naar: [[WHITE]]{0}
 Commands.Party.ToggleShareCategory=[[GRAY]]Groep item delen in [[GOLD]]{0} [[GRAY]]is nu [[DARK_AQUA]]{1}
 Commands.Party.AlreadyExists=[[DARK_RED]]Groep {0} bestaat al!
 Commands.Party.Kick=[[RED]]Je bent verwijderd uit de groep {0}!
@@ -163,7 +163,7 @@ Commands.Party.Quit=[[RED]]- Verlaat je huidige groep
 Commands.Party.Teleport=<player> [[RED]]- Teleport naar een groepslid
 Commands.Party.Toggle=[[RED]]- Zet Party Chat aan/uit
 Commands.Party1=[[RED]]- Maak een nieuwe groep
-Commands.ptp.RequestExpired=[[RED]]Groep\'s teleport verzoek is verlopen!
+Commands.ptp.RequestExpired=[[RED]]Groep''s teleport verzoek is verlopen!
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Kracht Level [[YELLOW]]Leiderbord--
 Commands.PowerLevel=[[DARK_RED]]KRACHT LEVEL: [[GREEN]]{0}
 Commands.Usage.Level=niveau
@@ -174,7 +174,7 @@ Commands.Usage.XP=xp
 mcMMO.NoSkillNote=[[DARK_GRAY]]als je geen toegang hebt tot een vermogen, wordt die hier niet getoont
 Party.Forbidden=[mcMMO] Groepen zijn niet toegestaan in deze wereld (zie Machtigingen)
 Party.InformedOnQuit={0} [[GREEN]]heeft de groep verlaten
-Party.InvalidName=[[DARK_RED]]Dat is geen geldige groep\'s naam.
+Party.InvalidName=[[DARK_RED]]Dat is geen geldige groep''s naam.
 Party.IsLocked=[[RED]]Deze groep is al gesloten!
 Party.IsntLocked=[[RED]]Deze groep is niet gesloten!
 Party.Locked=[[RED]]De groep is gesloten, alleen de groepsleider kan spelers uitnodigen.
@@ -226,10 +226,10 @@ Effects.Effects=EFFECTEN
 Effects.Child=[[DARK_GRAY]]LVL: [[GREEN]]{0}
 Effects.Parent=[[GOLD]]{0} -
 Guides.Axes=Guide coming soon...
-Guides.Excavation=[[DARK_AQUA]]About Excavation:\n[[YELLOW]]Excavation is the act of digging up dirt to find treasures.\n[[YELLOW]]By excavating the land you will find treasures.\n[[YELLOW]]The more you do this the more treasures you can find.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you must dig with a shovel in hand.\n[[YELLOW]]Only certain materials can be dug up for treasures and XP.\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Grass, Dirt, Sand, Clay, Gravel, Mycelium, Soul Sand\n\n[[DARK_AQUA]]How to use Giga Drill Breaker:\n[[YELLOW]]With a shovel in hand right click to ready your tool.\n[[YELLOW]]Once in this state you have about 4 seconds to make\n[[YELLOW]]contact with Excavation compatible materials this will\n[[YELLOW]]activate Giga Drill Breaker.\n[[DARK_AQUA]]What is Giga Drill Breaker?\n[[YELLOW]]Giga Drill Breaker is an ability with a cooldown\n[[YELLOW]]tied to Excavation skill. It triples your chance\n[[YELLOW]]of finding treasures and enables instant break\n[[YELLOW]]on Excavation materials.\n\n[[DARK_AQUA]]How does Treasure Hunter work?\n[[YELLOW]]Every possible treasure for Excavation has its own\n[[YELLOW]]skill level requirement for it to drop, as a result it\'s\n[[YELLOW]]difficult to say how much it is helping you.\n[[YELLOW]]Just keep in mind that the higher your Excavation skill\n[[YELLOW]]is, the more treasures that can be found.\n[[YELLOW]]And also keep in mind that each type of Excavation\n[[YELLOW]]compatible material has its own unique list of treasures.\n[[YELLOW]]In other words you will find different treasures in Dirt\n[[YELLOW]]than you would in Gravel.\n[[DARK_AQUA]]Notes about Excavation:\n[[YELLOW]]Excavation drops are completely customizeable\n[[YELLOW]]So results vary server to server.
+Guides.Excavation=[[DARK_AQUA]]About Excavation:\n[[YELLOW]]Excavation is the act of digging up dirt to find treasures.\n[[YELLOW]]By excavating the land you will find treasures.\n[[YELLOW]]The more you do this the more treasures you can find.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you must dig with a shovel in hand.\n[[YELLOW]]Only certain materials can be dug up for treasures and XP.\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Grass, Dirt, Sand, Clay, Gravel, Mycelium, Soul Sand\n\n[[DARK_AQUA]]How to use Giga Drill Breaker:\n[[YELLOW]]With a shovel in hand right click to ready your tool.\n[[YELLOW]]Once in this state you have about 4 seconds to make\n[[YELLOW]]contact with Excavation compatible materials this will\n[[YELLOW]]activate Giga Drill Breaker.\n[[DARK_AQUA]]What is Giga Drill Breaker?\n[[YELLOW]]Giga Drill Breaker is an ability with a cooldown\n[[YELLOW]]tied to Excavation skill. It triples your chance\n[[YELLOW]]of finding treasures and enables instant break\n[[YELLOW]]on Excavation materials.\n\n[[DARK_AQUA]]How does Treasure Hunter work?\n[[YELLOW]]Every possible treasure for Excavation has its own\n[[YELLOW]]skill level requirement for it to drop, as a result it''s\n[[YELLOW]]difficult to say how much it is helping you.\n[[YELLOW]]Just keep in mind that the higher your Excavation skill\n[[YELLOW]]is, the more treasures that can be found.\n[[YELLOW]]And also keep in mind that each type of Excavation\n[[YELLOW]]compatible material has its own unique list of treasures.\n[[YELLOW]]In other words you will find different treasures in Dirt\n[[YELLOW]]than you would in Gravel.\n[[DARK_AQUA]]Notes about Excavation:\n[[YELLOW]]Excavation drops are completely customizeable\n[[YELLOW]]So results vary server to server.
 Guides.Header=[[GOLD]]-=[[GREEN]]{0} Handleiding[[GOLD]]=-
 Guides.Mining=[[DARK_AQUA]]About Mining:\n[[YELLOW]]Mining consists of mining stone and ores. It provides bonuses\n[[YELLOW]]to the amount of materials dropped while mining.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill, you must mine with a pickaxe in hand.\n[[YELLOW]]Only certain blocks award XP.\n\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Stone, Coal Ore, Iron Ore, Gold Ore, Diamond Ore, Redstone Ore,\n[[YELLOW]]Lapis Ore, Obsidian, Mossy Cobblestone, Ender Stone,\n[[YELLOW]]Glowstone, and Netherrack.\n\n[[DARK_AQUA]]How to use Super Breaker:\n[[YELLOW]]With a pickaxe in your hand, right click to ready your tool.\n[[YELLOW]]Once in this state, you have about 4 seconds to make contact\n[[YELLOW]]with Mining compatible materials, which will activate Super\n[[YELLOW]]Breaker.\n\n[[DARK_AQUA]]What is Super Breaker?\n[[YELLOW]]Super Breaker is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It triples your chance of extra items dropping and\n[[YELLOW]]enables instant break on Mining materials.\n\n[[DARK_AQUA]]How to use Blast Mining:\n[[YELLOW]]With a detonator in hand, which is a flint & steel by default,\n[[YELLOW]]right-click on TNT from a distance. This will cause the TNT\n[[YELLOW]]to instantly explode.\n\n[[DARK_AQUA]]How does Blast Mining work?\n[[YELLOW]]Blast Mining is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It gives bonuses when mining with TNT and allows you\n[[YELLOW]]to remote detonate TNT. There are three parts to Blast Mining.\n[[YELLOW]]The first part is Bigger Bombs, which increases blast radius.\n[[YELLOW]]The second is Demolitions Expert, which decreases damage\n[[YELLOW]]from TNT explosions. The third part simply increases the\n[[YELLOW]]amount of ores dropped from TNT and decreases the\n[[YELLOW]]debris dropped.
-Guides.Page.OutOfRange=Deze pagina bestaat niet, er zijn in totaal {0} pagina\'s.
+Guides.Page.OutOfRange=Deze pagina bestaat niet, er zijn in totaal {0} pagina''s.
 Inspect.OfflineStats=mcMMO statistieken voor offline-speler [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Statistieken voor [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]Jij bent te ver weg om deze speler te inspecteren!
