--- a/src/main/resources/locale/locale_ko.properties
+++ b/src/main/resources/locale/locale_ko.properties
@@ -444,7 +444,7 @@ Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] \uc21c\uc704\
 Commands.SkillInfo=[[RED]]- \uc2a4\ud0ac\uc5d0 \ub300\ud55c \uc790\uc138\ud55c \uc815\ubcf4 \ubcf4\uae30
 Commands.Stats.Self=\ub2f9\uc2e0\uc758 \uc2a4\ud15f
 Commands.Stats=[[RED]]-  mcMMO \uc2a4\ud15f \ubcf4\uae30
-Commands.ToggleAbility=[[RED]]- \'\ub9c8\uc6b0\uc2a4 \uc6b0\ud074\ub9ad\uc73c\ub85c \ub2a5\ub825 \ud65c\uc131\ud654\' \ud1a0\uae00
+Commands.ToggleAbility=[[RED]]- ''\ub9c8\uc6b0\uc2a4 \uc6b0\ud074\ub9ad\uc73c\ub85c \ub2a5\ub825 \ud65c\uc131\ud654'' \ud1a0\uae00
 Commands.Usage.0=[[RED]]\uc62c\ubc14\ub978 \uc0ac\uc6a9\ubc95 /{0}
 Commands.Usage.1=[[RED]]\uc62c\ubc14\ub978 \uc0ac\uc6a9\ubc95 /{0} {1}
 Commands.Usage.2=[[RED]]\uc62c\ubc14\ub978 \uc0ac\uc6a9\ubc95 /{0} {1} {2}
@@ -539,7 +539,7 @@ Commands.xplock.unlocked=[[GOLD]]\ub2f9\uc2e0\uc758 \uacbd\ud5d8\uce58 \ubc14\ua
 Commands.xprate.modified=[[RED]]\uacbd\ud5d8\uce58 \ubc30\uc728\uc774 {0}\uc73c\ub85c \uc218\uc815\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
 Commands.xprate.over=[[RED]]mcMMO XP Rate \uc774\ubca4\ud2b8\uac00 \ub05d\ub0ac\uc2b5\ub2c8\ub2e4!!
 Commands.xprate.proper.0=[[RED]]\uacbd\ud5d8\uce58\ub960 \ubcc0\uacbd\uc758 \uc62c\ubc14\ub978 \uc0ac\uc6a9\ubc95 /xprate <integer> <true/false>
-Commands.xprate.proper.1=[[RED]]\'\uacbd\ud5d8\uce58\ub960 \uae30\ubcf8\uac12\uc73c\ub85c \ubcf5\uad6c\'  \uba85\ub839\uc5b4\uc758 \uc62c\ubc14\ub978 \uc0ac\uc6a9\ubc95: /xprate reset
+Commands.xprate.proper.1=[[RED]]''\uacbd\ud5d8\uce58\ub960 \uae30\ubcf8\uac12\uc73c\ub85c \ubcf5\uad6c''  \uba85\ub839\uc5b4\uc758 \uc62c\ubc14\ub978 \uc0ac\uc6a9\ubc95: /xprate reset
 Commands.xprate.proper.2=[[RED]]\uacbd\ud5d8\uce58 \uc774\ubca4\ud2b8\ub97c \ud558\ub294\uc9c0 \uc548\ud558\ub294\uc9c0 \ud45c\uc2dc\ud558\uae30 \uc704\ud574 true\ub098 false\ub85c \uba85\uae30\ud558\uc2ed\uc2dc\uc624.
 Commands.xprate.started.0=[[GOLD]] mcMMO \uacbd\ud5d8\uce58 \uc774\ubca4\ud2b8\uac00 \uc2dc\uc791\ub418\uc5c8\uc2b5\ub2c8\ub2e4!
 Commands.xprate.started.1=[[GOLD]]mcMMO \uacbd\ud5d8\uce58 \ubc30\uc728\uc740 \uc774\uc81c {0}x \uc785\ub2c8\ub2e4!
