--- a/Changelog.txt
+++ b/Changelog.txt
@@ -52,6 +52,7 @@ Version 1.4.07-dev
  ! Updated localization files
  ! Party item share category states are now saved when the server shuts down.
  ! When using "Super Breaker" or "Giga Driller" abilities extra tool durability is used (again)
+ ! Mob healthbars are automatically disabled when the plugin "HealthBar" is found
  - The /mmoupdate command has been removed. It is replaced by /mcconvert database
  - Removed Abilities.Tools.Durability_Loss_Enabled, set Abilities.Tools.Durability_Loss to 0 to disable instead.
  - Removed SpoutPlugin support
