--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -330,6 +330,7 @@ Taming.Skillup=[[YELLOW]]Taming skill increased by {0}. Total ({1})
 Taming.Summon.Complete=[[GREEN]]Summoning complete
 Taming.Summon.Fail.Ocelot=[[RED]]You have too many ocelots nearby to summon any more.
 Taming.Summon.Fail.Wolf=[[RED]]You have too many wolves nearby to summon any more.
+Taming.Summon.Fail.Horse=[[RED]]You have too many horses nearby to summon any more.
 Taming.Summon.Name.Format={0}''s {1}
 
 #UNARMED
